@@ -1,6 +1,9 @@
 4.5.92
 ======
 - Implement support for the RestartImmediately restart style hint.
+- Fix possible crash with uninitialised GError (bug 4202).
+- Link libxfsm against all required libs to avoid link-time errors
+  (bug 4429).
 
 
 4.5.91
